force-app/main/default/objects/GSA_Fact_Table__c/GSA_Fact_Table__c.object-meta.xml
<CustomObject>
    <label>GSA Fact Table</label>
    <nameField>
        <displayFormat>GSA-BASE-{0000000000}</displayFormat>
        <label>GSA Fact Table Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GSA Facts Table</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>