force-app/main/default/objects/GSA_Fact_Table__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <type>Lookup</type>
</CustomField>