force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_CLIN__c.field-meta.xml
<CustomField>
    <fullName>GSA_CLIN__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA CLIN</label>
    <referenceTo>GSA_CLIN__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>