force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>GSA_Finance_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA Finance Type</label>
    <referenceTo>GSA_Finance_Type__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>