force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_Functional_Role__c.field-meta.xml
<CustomField>
    <fullName>GSA_Functional_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GSA Functional Role</label>
    <referenceTo>GSA_Functional_Role__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <type>Lookup</type>
</CustomField>