force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_LCAT__c.field-meta.xml
<CustomField>
    <fullName>GSA_LCAT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GSA LCAT</label>
    <referenceTo>GSA_LCAT__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <type>Lookup</type>
</CustomField>