force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_Task__c.field-meta.xml
<CustomField>
    <fullName>GSA_Task__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA Task</label>
    <referenceTo>GSA_Task_Group__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>