force-app/main/default/objects/GSA_Fact_Table__c/fields/GSA_Unit_of_Work__c.field-meta.xml
<CustomField>
    <fullName>GSA_Unit_of_Work__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>GSA Unit of Work</label>
    <referenceTo>GSA_Unit_of_Work__c</referenceTo>
    <relationshipLabel>GSA Facts Table</relationshipLabel>
    <relationshipName>GSA_Facts_Table</relationshipName>
    <type>Lookup</type>
</CustomField>