force-app/main/default/objects/GSA_Fact_Table__c/fields/Hourly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Hourly_Bill_Rate__c</fullName>
    <formula>GSA_Bill_Rate__r.Hourly_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hourly Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>