force-app/main/default/objects/GSA_Fact_Table__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <formula>GSA_Period__r.Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>