force-app/main/default/objects/GSA_Fact_Table__c/fields/Period_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Period_Bill_Rate__c</fullName>
    <formula>Hourly_Bill_Rate__c *  GSA_Unit_of_Work__r.Unit_of_Work__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>