force-app/main/default/objects/GSA_Fact_Table__c/fields/Period_Designation__c.field-meta.xml
<CustomField>
    <fullName>Period_Designation__c</fullName>
    <label>Period Designation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Year</fullName>
            </value>
            <value>
                <fullName>Sprint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>