force-app/main/default/objects/GSA_Fact_Table__c/fields/Period_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Period_Dollars__c</fullName>
    <formula>Period_Bill_Rate__c +  Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>