force-app/main/default/objects/GSA_Fact_Table__c/fields/Unfunded__c.field-meta.xml
<CustomField>
    <fullName>Unfunded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unfunded</label>
    <type>Checkbox</type>
</CustomField>