force-app/main/default/objects/GSA_Fact_Table__c/recordTypes/Cost.recordType-meta.xml
<RecordType>
    <fullName>Cost</fullName>
    <active>true</active>
    <label>Cost</label>
</RecordType>