force-app/main/default/objects/GSA_Fact_Table__c/recordTypes/Revenue.recordType-meta.xml
<RecordType>
    <fullName>Revenue</fullName>
    <active>true</active>
    <label>Revenue</label>
</RecordType>