force-app/main/default/objects/GSA_Fact_Table__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>RECORDTYPE</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>GSA_Period__c</columns>
    <columns>GSA_Project__c</columns>
    <columns>GSA_Task__c</columns>
    <columns>GSA_Unit_of_Work__c</columns>
    <columns>GSA_Finance_Type__c</columns>
    <columns>GSA_Bill_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>